author-book-review-helm-chart/yaml-files/zipkin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
  labels:
    app: zipkin
    tier: backend
spec:
  selector:
    app: zipkin
  ports:
    - port: 9411
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:2.18.0
          ports:
            - containerPort: 9411
