author-book-review-helm-chart/yaml-files/apps-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /zipkin
            backend:
              serviceName: zipkin-service
              servicePort: 9411
          - path: /authorbookapi
            backend:
              serviceName: authorbookapi-service
              servicePort: 8080
          - path: /bookreviewapi
            backend:
              serviceName: bookreviewapi-service
              servicePort: 8080
